# lifesync-backend

./: .gitignore  README.md  docker-compose.yml  seed.py  test_ai.py
ai_planner/: pyproject.toml
ai_planner/src/: main.py  worker.py
ai_planner/src/agents/: parser.py
ai_planner/src/tools/: scheduler.py
api_gateway/: pyproject.toml
api_gateway/src/: main.py
api_gateway/src/api/: router.py
api_gateway/src/api/services/: __init__.py  planner_client.py  queue_service.py
api_gateway/src/api/v1/endpoints/: __init__.py  planner.py
shared/models/: database.py  models.py  schemas.py
