[project]
name = "ai-planner"
version = "0.1.0"
description = ""
authors = [
    {name = "vladyslav", email = "llpvo2602ll@gmail.com"}
]
readme = "README.md"
# Change this line to set an upper limit < 4.0.0
requires-python = ">=3.12,<4.0.0"

dependencies = [
    "langchain-core (>=1.3.3,<2.0.0)",
    "langchain-ollama (>=0.1.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"