[project]
name = "ai-planner"
version = "0.1.0"
description = ""
authors = [
    {name = "vladyslav", email = "llpvo2602ll@gmail.com"}
]
readme = "README.md"
# Change this line to set an upper limit < 4.0.0
requires-python = ">=3.12,<4.0.0"

dependencies = [
    "langchain-core (>=1.3.3,<2.0.0)",
    "langchain-ollama (>=0.1.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "fastapi (>=0.110.0,<1.0.0)",
    "uvicorn (>=0.28.0,<1.0.0)",
    "aio-pika (>=9.4.0,<10.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"